[workspace]
members = [
    "common",
    "day_1",
    "day_2",
    "day_3",
    "day_4",
    "day_5",
    "day_6",
    "day_7",
    "day_8",
    "day_9",
    "day_10",
    "day_11",
    "day_12",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.opt]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
